# fund-label-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  INVESTODAY_FUND_API_CATALOG.md  LEADERSHIP-WALKTHROUGH.md  Makefile  PRODUCT.md  PROJECT-OVERVIEW.md  README.md  docker-compose.yml  fund-research-workbench-plan.md  pyproject.toml
config/: cognition_chains.yaml  cognition_themes.json  portfolio_constraints.v1.json  portfolio_roles.v1.json  rules.v1.div04.json  rules.v1.div05.json  rules.v1.json
data/: README.md  stock_industry_seed.mvp.csv
docs/: baseline-research.md  cognition-driven-fund-engine-design.md  cognition-engine-deep-design.md  data-contract.md  docker-deployment.md  fund-classification-and-grouping.md  fund-insight-engine-architecture.md  funddata-integration.md  investment-architecture-rethink.md  label-taxonomy.md  leadership-page-walkthrough-2026-07-06.md  meeting-report-2026-06-24.md  mvp-roadmap.md  phase1-v1-project-report-2026-06-30.md  private-fund-investment-research-system-plan.md  project-discussion-record-2026-07-03.md  project-goals.md  project-intro-brief-2026-06-24.md  requirements.md  runbook-batch-workflow.md  scope-boundary.md  todo.md  walkthrough-style-overview-2026-07-06.md
frontend/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
reports/: compare_div03_vs_div04.md  compare_div03_vs_div05.md  compare_dividend_sector_split.md  dividend-steady-threshold-ab-replay.md  equity-style-audit-and-calibration-dcce7dcd.md  equity-style-label-split-replay-3a1339e0.md  equity_style_contributions_4f2db5dd.md  equity_style_contributions_full_dcce7dcd.md  phase1-v1-benchmark-gap-action-plan.md
scripts/: apply_portfolio_v1_acceptance_reviews.py  audit_benchmark_quality.py  audit_relative_label_eligibility.py  audit_style_pending_reasons.py  backup_sqlite.py  cognition_deep_verify.py  cognition_engine.py  cognition_match_demo.py  compare_runs.py  data_quality_inspection.py  data_source.py  fetch_benchmark_returns.py  (+34 more)
(+241 files in other folders)
