[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fund-label-engine"
version = "0.1.0"
description = "Explainable fund label calculation engine for asset-management research workflows."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "pydantic>=2.7",
  "uvicorn>=0.30",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "pytest>=8.2",
  "ruff>=0.4",
]

[tool.setuptools]
package-dir = {"" = "backend"}

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend", "."]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
  ".venv",
  "build",
  "data",
  "logs",
  "__pycache__",
]

[tool.ruff.lint]
# 关键规则集：行长度、命名、导入、可读性
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # bugbear
  "C4",  # comprehensions
  "UP",  # pyupgrade
]
# 允许 noqa 的场景：测试中常用
ignore = [
  "E501",  # 由 formatter / line-length 控制
  "B008",  # FastAPI 中的函数调用作为默认值是有意为之
  "B007",  # loop 变量未使用
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = ["B011"]   # 测试中 assert False 是有意的
"**/*.py" = ["E402"]             # __future__ import 后允许
